plugins {
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.5'
	id 'java'
    id 'application'
}

group = 'com.streams'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
	mavenCentral()
}
ext {
    javaMainClass = "com.streams.pipes.PipesApplication"
}
application {
    mainClassName = javaMainClass
}
jar {
    manifest {
        attributes "Main-Class": "com.streams.pipes.PipesApplication"
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
bootJar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.kafka:spring-kafka'
	implementation 'org.apache.kafka:kafka-streams'
    implementation 'com.hazelcast:hazelcast-spring:5.5.0'
    implementation 'com.hazelcast:hazelcast:5.5.0'
    implementation group: 'com.hazelcast.jet', name: 'hazelcast-jet-kafka', version: '5.5.0'
    implementation group: 'com.google.guava', name: 'guava', version: '33.2.1-jre'
	implementation 'com.github.danielwegener:logback-kafka-appender:0.2.0-RC2'
    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.12'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
}
tasks.withType(JavaCompile) {
    options.compilerArgs << '-Xlint:unchecked'
    options.deprecation = true
}
